<resources>
    <string name="app_name">Find My Car</string>
    <string name="loading">Loading</string>
    <string name="status"></string>
    <string name="signed_in_fmt">Signed In</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_in_failed">Login Failed</string>
    <string name="submit">Submit</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <!-- Login Activity -->
    <string name="find_my_car">Find My Car</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="login_action">Login</string>
    <string name="sign_up_toggle">Create Account</string>

    <string name="sign_up_action">Sign Up</string>
    <string name="login_toggle">Login?</string>

    <!-- Main Activity -->
    <string name="location_history">Location History</string>
    <string name="add_location">Add Location</string>

    <string name="edit_location">Edit Location</string>
</resources>
