<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_location"
        android:layout_marginTop="@dimen/activity_main_title_text"
        android:textSize="@dimen/activity_main_title_text"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edit_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:hint="@string/latitude"
        style="@style/DefaultEditText"/>

    <EditText
        android:id="@+id/edit_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:hint="@string/longitude"
        style="@style/DefaultEditText"/>

    <TextView
        android:id="@+id/edit_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        style="@style/ActionTextButton"/>

</LinearLayout>
